<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Title Activitys & App name -->
    <string name="app_name">MW_clientAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alogin">Login</string>
    <string name="title_activity_amenu">Menu</string>
    <string name="title_activity_aregister">Register</string>
    <string name="title_activity_abattle">Battle</string>
    <string name="title_activity_amy_data">My Data</string>

    <!-- ALogin Strings -->
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="hint_userOrMail">Username or Email</string>
    <string name="hint_password">Password</string>

    <!-- AMenu Strings -->
    <string name="btn_battle">Battle</string>
    <string name="btn_showData">Show Data</string>

    <!-- ABattle Strings -->
    <string name="btn_defense">Shield</string>
    <string name="btn_dodge">Dodge</string>
    <string name="btn_superAttack">Ultimate Attack</string>
    <string name="btn_spell1">Spell 1</string>
    <string name="btn_spell2">Spell 2</string>
    <string name="btn_normalAttack">Basic Attack</string>
    <string name="tv_nameAttack">Name Attack</string>
    <string name="tv_definitionAttack">Definition Attack</string>

    <!-- AMyData Strings -->
    <string name="tv_life">Life</string>
    <string name="tv_energy">Energy</string>
    <string name="tv_regEnergy">Energy Reg.</string>
    <string name="tv_strength">Strength</string>
    <string name="tv_inteligence">Intelligence</string>
    <string name="tv_dateRegister">Date Register</string>
    <string name="tv_totalPoints">Total Points</string>
    <string name="tv_totalWins">Total Wins</string>

    <!-- ASplash Strings -->


    <!-- ARegister Strings -->
    <string name="tv_registration">Registration</string>
    <string name="tv_userName">Username</string>
    <string name="et_userName">Choose your username</string>
    <string name="tv_mail">Email</string>
    <string name="et_mail">Type a real email</string>
    <string name="tv_password">Password</string>
    <string name="et_password">Choose a password</string>
    <string name="tv_confirmPassword">Confirm password</string>
    <string name="et_confirmPassword">Repeat the password</string>
    <string name="btn_registerActivity">Register</string>

    <!-- ARegisterPlayer Strings -->

    <string name="tv_title_selectClass">Select Class</string>
    <string name="tv_warlock">Warlock</string>
    <string name="tv_mage">Mage</string>
    <string name="tv_skill_life">Life</string>
    <string name="tv_skill_energy">Energy</string>
    <string name="tv_skill_regEnergy">Energy Regeneration</string>
    <string name="tv_skill_strength">Strength</string>
    <string name="tv_skill_inteligence">Inteligence</string>
    <string name="tv_skill_unassigned_points">Unassigned Points</string>
    <string name="tv_check_register_player_form"></string>
    <string name="lbl_life"></string>
    <string name="lbl_energy"></string>
    <string name="lbl_regEnergy"></string>
    <string name="lbl_strength"></string>
 <!-- Enter to the custom component -->
    <string name="lbl_inteligence"></string>
 <!-- Enter to the custom component -->
    <string name="lbl_unsassigned_points"></string>
    <string name="et_playerName">Choose your player name</string>

    <!-- ASearchingBattle Strings -->

    <string name="tv_searching">Searching</string>
    <string name="tv_cheats"></string>
    <string name="title_activity_aregister_player">ARegister_player</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_custom_progress_dialog">CustomProgressDialog</string>

</resources>