<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_generic"
    tools:context="dam.mw.clientAndroid.official.ALogin" >

    <EditText
        android:id="@+id/et_userOrMail"
        android:layout_width="500px"
        android:layout_height="100px"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:background="@drawable/edittext_modified_states"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_userOrMail"
        android:textSize="20dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_register"
        android:layout_alignBottom="@+id/btn_register"
        android:layout_alignRight="@+id/et_password"
        android:onClick="onClick"
        android:text="@string/btn_login"
        android:background="@android:color/transparent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="43dp"
        android:onClick="onClick"
        android:text="@string/btn_register"
        android:background="@android:color/transparent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="500px"
        android:layout_height="100px"
        android:layout_alignLeft="@+id/et_userOrMail"
        android:layout_below="@+id/et_userOrMail"
        android:layout_marginTop="27dp"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="500px"
        android:layout_height="500px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200px"
        android:layout_height="200px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="41dp" />

</RelativeLayout>
