<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_generic"
    android:orientation="vertical" >

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >
        
        <TextView
        android:id="@+id/tv_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="60dp"
        
        android:textColor="#FFFFFF"
        android:text="Life: "
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_lifeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >
        
        <TextView
        android:id="@+id/tv_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="60dp"
        
        android:textColor="#FFFFFF"
        android:text="Energy: "
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_energyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >
        
        <TextView
        android:id="@+id/tv_life2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="60dp"
        
        android:textColor="#FFFFFF"
        android:text="Contrincant life: "
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_lifeNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >
        
        <TextView
        android:id="@+id/tv_energy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="60dp"
        
        android:textColor="#FFFFFF"
        android:text="Contrincant energy: "
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_energyNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp" >
        
        <Button
        android:id="@+id/btn_dodge"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/button_modified_states"
        android:textColor="#FFFFFF"
        android:onClick="onClick"
        android:text="@string/btn_dodge" />
    <Button
        android:id="@+id/btn_defense"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/button_modified_states"
        android:textColor="#FFFFFF"
        android:onClick="onClick"
        android:text="@string/btn_defense" />

    <Button
        android:id="@+id/btn_superAttack"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_modified_states"
        android:onClick="onClick"
        android:text="@string/btn_superAttack"
        android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp" >
    
        <Button
        android:id="@+id/btn_spell2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_modified_states"
        android:textColor="#FFFFFF"
        android:onClick="onClick"
        android:text="@string/btn_spell2" />
    <Button
        android:id="@+id/btn_normalAttack"
        android:layout_marginLeft="15dp"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/button_modified_states"
        android:textColor="#FFFFFF"
        android:onClick="onClick"
        android:text="@string/btn_normalAttack" />
    <Button
        android:id="@+id/btn_spell1"
        android:layout_marginLeft="15dp"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/button_modified_states"
        android:textColor="#FFFFFF"
        android:onClick="onClick"
        android:text="@string/btn_spell1" />
        
        
    </LinearLayout>

</LinearLayout>