<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_generic2"
    tools:context="dam.mw.clientAndroid.official.ARegister_Player" >

    <!-- android:background="@drawable/bg_generic3" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/characterClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Warlock"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_characterName"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="Character Name" >

            <requestFocus />
        </EditText>

        <ToggleButton
            android:id="@+id/selectChamp"
            android:layout_width="174dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/toggle_style"
            android:text="ToggleButton"
            android:textOff=""
            android:textOn="" />

        <ImageView
            android:id="@+id/iv_separator1"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:src="@drawable/separador" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="7" >

            <TextView
                android:id="@+id/tv_skill_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="7dp"
                android:text="@string/tv_skill_life"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/life_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:layout_marginTop="7dp"
                android:gravity="right"
                android:text="8"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_skill_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_skill_life"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="7dp"
                android:text="@string/tv_skill_energy"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/energy_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_skill_life"
                android:layout_marginRight="50dp"
                android:layout_marginTop="7dp"
                android:gravity="right"
                android:text="5"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_skill_regEnergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_skill_energy"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="7dp"
                android:text="@string/tv_skill_regEnergy"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/energyReg_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_skill_energy"
                android:layout_marginRight="50dp"
                android:layout_marginTop="7dp"
                android:gravity="right"
                android:text="3"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_separator2"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/separador" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" >

            <TextView
                android:id="@+id/tv_skill_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/tv_skill_strength"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/strength_point_down"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="76dp"
                android:gravity="center"
                android:onClick="strenght_down" />

            <TextView
                android:id="@+id/strength_point"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="9"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/strength_point_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:onClick="strenght_up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_skill_inteligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/tv_skill_inteligence"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/inteligence_point_down"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="58dp"
                android:gravity="center"
                android:onClick="inteligence_down" />

            <TextView
                android:id="@+id/inteligence_point"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="2"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/inteligence_point_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:onClick="inteligence_up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tv_skill_unassigned_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/tv_skill_unassigned_points"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/unassigned_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="12"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register_player"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_modified_states"
            android:onClick="onClick"
            android:text="Register"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>